Added event detail page, still in progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,12 +33,19 @@
             android:theme="@style/AppThemeLight">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivity"
             android:label="">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ch.amiv.android_app.MainActivity" />
+        </activity>
+        <activity android:name=".EventDetailActivity"
+            android:theme="@style/AppThemeLight">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ch.amiv.android_app.MainActivity" />
