--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    //implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation project(path: ':volley')
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
