--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,30 +29,37 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppThemeLight"
-            android:configChanges="keyboardHidden|orientation|screenSize"
             android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".LoginActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label=""
-            android:windowSoftInputMode="stateVisible"
-            android:configChanges="keyboardHidden|orientation|screenSize">
+            android:windowSoftInputMode="stateVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ch.amiv.android_app.MainActivity" />
         </activity>
-        <activity android:name=".EventDetailActivity"
+        <activity
+            android:name=".EventDetailActivity"
             android:theme="@style/AppThemeLight">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ch.amiv.android_app.MainActivity" />
+        </activity>
+        <activity android:name=".BarcodeIdActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity">
+
         </activity>
     </application>
 
