--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
-        android:supportsRtl="true"
+        android:name=".MyApplication"
         android:theme="@style/AppThemeLight">
         <activity
             android:name=".SettingsActivity"
             android:label=""
+            android:configChanges="layoutDirection|locale"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -29,7 +30,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:configChanges="keyboardHidden|orientation|layoutDirection|screenSize|locale"
             android:label="@string/app_name"
             android:theme="@style/AppThemeLight"
             android:windowSoftInputMode="adjustNothing">
@@ -42,7 +43,7 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:configChanges="keyboardHidden|orientation|layoutDirection|screenSize|locale"
             android:label=""
             android:windowSoftInputMode="stateVisible">
             <meta-data
@@ -51,6 +52,7 @@
         </activity>
         <activity
             android:name=".EventDetailActivity"
+            android:configChanges="orientation|layoutDirection|locale"
             android:theme="@style/AppThemeLight">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -58,6 +60,7 @@
         </activity>
         <activity android:name=".BarcodeIdActivity"
             android:screenOrientation="portrait"
+            android:configChanges="layoutDirection|locale"
             android:parentActivityName=".MainActivity">
 
         </activity>
