--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,19 +17,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
-        android:name=".MyApplication"
+        android:name=".core.MyApplication"
         android:theme="@style/AppThemeLight">
         <activity
-            android:name=".SettingsActivity"
+            android:name=".core.SettingsActivity"
             android:label=""
             android:configChanges="layoutDirection|locale"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".core.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ch.amiv.android_app.MainActivity" />
+                android:value="ch.amiv.android_app.core.MainActivity" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".core.MainActivity"
             android:configChanges="keyboardHidden|orientation|layoutDirection|screenSize|locale"
             android:label="@string/app_name"
             android:theme="@style/AppThemeLight"
@@ -42,27 +42,78 @@
 
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".core.LoginActivity"
             android:configChanges="keyboardHidden|orientation|layoutDirection|screenSize|locale"
             android:label=""
             android:windowSoftInputMode="stateVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ch.amiv.android_app.MainActivity" />
+                android:value="ch.amiv.android_app.core.MainActivity" />
         </activity>
         <activity
-            android:name=".EventDetailActivity"
+            android:name=".core.EventDetailActivity"
             android:configChanges="orientation|layoutDirection|locale"
             android:theme="@style/AppThemeLight">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ch.amiv.android_app.MainActivity" />
+                android:value="ch.amiv.android_app.core.MainActivity" />
         </activity>
-        <activity android:name=".BarcodeIdActivity"
+        <activity android:name=".checkin.BarcodeIdActivity"
             android:screenOrientation="portrait"
             android:configChanges="layoutDirection|locale"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".core.MainActivity">
 
+        </activity>
+
+
+        <!-- Checkin -->
+        <activity
+            android:name=".checkin.MainActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name"
+            android:theme="@style/CheckinTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".checkin.ScanActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/CheckinTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".checkin.MainActivity" />
+        </activity>
+
+        <activity android:name=".checkin.SettingsActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name"
+            android:theme="@style/CheckinTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".checkin.MainActivity" />
+        </activity>
+
+        <activity android:name=".checkin.MemberListActivity"
+            android:theme="@style/CheckinTheme"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/checkin_searchable"/>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".checkin.ScanActivity" />
+        </activity>
+
+        <activity android:name=".checkin.SearchMembersActivity"
+            android:theme="@style/CheckinTheme"
+            android:label="@string/app_name">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".checkin.MemberListActivity" />
         </activity>
     </application>
 
