--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,17 +70,14 @@
         <activity
             android:name=".checkin.MainActivity"
             android:screenOrientation="portrait"
-            android:label="@string/app_name"
+            android:label="@string/app_name_checkin"
             android:theme="@style/CheckinTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name=".checkin.ScanActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/CheckinTheme">
+            android:theme="@style/CheckinTheme"
+            android:label="@string/app_name_checkin">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".checkin.MainActivity" />
@@ -88,7 +85,7 @@
 
         <activity android:name=".checkin.SettingsActivity"
             android:screenOrientation="portrait"
-            android:label="@string/app_name"
+            android:label="@string/app_name_checkin"
             android:theme="@style/CheckinTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -97,7 +94,7 @@
 
         <activity android:name=".checkin.MemberListActivity"
             android:theme="@style/CheckinTheme"
-            android:label="@string/app_name">
+            android:label="@string/app_name_checkin">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
@@ -110,7 +107,7 @@
 
         <activity android:name=".checkin.SearchMembersActivity"
             android:theme="@style/CheckinTheme"
-            android:label="@string/app_name">
+            android:label="@string/app_name_checkin">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".checkin.MemberListActivity" />
