--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,17 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
+        android:name=".core.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
-        android:name=".core.MyApplication"
         android:theme="@style/AppThemeLight">
         <activity
             android:name=".core.SettingsActivity"
-            android:label=""
             android:configChanges="layoutDirection|locale"
+            android:label=""
             android:parentActivityName=".core.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -39,7 +39,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".core.LoginActivity"
@@ -58,59 +57,66 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ch.amiv.android_app.core.MainActivity" />
         </activity>
-        <activity android:name=".checkin.BarcodeIdActivity"
-            android:screenOrientation="portrait"
+        <activity
+            android:name=".checkin.BarcodeIdActivity"
             android:configChanges="layoutDirection|locale"
-            android:parentActivityName=".core.MainActivity">
-
-        </activity>
-
+            android:parentActivityName=".core.MainActivity"
+            android:screenOrientation="portrait"></activity>
 
         <!-- Checkin -->
         <activity
             android:name=".checkin.MainActivity"
-            android:screenOrientation="portrait"
             android:label="@string/app_name_checkin"
-            android:theme="@style/CheckinTheme">
-        </activity>
-
-        <activity android:name=".checkin.ScanActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/CheckinTheme"
-            android:label="@string/app_name_checkin">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".checkin.MainActivity" />
-        </activity>
-
-        <activity android:name=".checkin.SettingsActivity"
-            android:screenOrientation="portrait"
+            android:theme="@style/CheckinTheme"></activity>
+        <activity
+            android:name=".checkin.ScanActivity"
             android:label="@string/app_name_checkin"
+            android:screenOrientation="portrait"
             android:theme="@style/CheckinTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".checkin.MainActivity" />
         </activity>
-
-        <activity android:name=".checkin.MemberListActivity"
-            android:theme="@style/CheckinTheme"
-            android:label="@string/app_name_checkin">
+        <activity
+            android:name=".checkin.SettingsActivity"
+            android:label="@string/app_name_checkin"
+            android:screenOrientation="portrait"
+            android:theme="@style/CheckinTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".checkin.MainActivity" />
+        </activity>
+        <activity
+            android:name=".checkin.MemberListActivity"
+            android:label="@string/app_name_checkin"
+            android:theme="@style/CheckinTheme">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/checkin_searchable"/>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/checkin_searchable" />
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".checkin.ScanActivity" />
         </activity>
-
-        <activity android:name=".checkin.SearchMembersActivity"
-            android:theme="@style/CheckinTheme"
-            android:label="@string/app_name_checkin">
+        <activity
+            android:name=".checkin.SearchMembersActivity"
+            android:label="@string/app_name_checkin"
+            android:theme="@style/CheckinTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".checkin.MemberListActivity" />
+        </activity>
+        
+        <!-- Demo -->
+        <activity android:name=".demo.MainActivity"
+            android:configChanges="layoutDirection|locale"
+            android:parentActivityName=".core.MainActivity"
+            android:screenOrientation="portrait">
+            
         </activity>
     </application>
 
