--- a/app/keystore.properties
+++ b/app/keystore.properties
@@ -1,4 +1,4 @@
-storeFile=release_keystore.jks
+storeFile=testkeystore.jks
 storePassword=000000
-keyAlias=releaseKey
+keyAlias=release
 keyPassword=000000
