--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,13 +94,13 @@
             android:name=".checkin.MainActivity"
             android:label="@string/app_name_checkin"
             android:screenOrientation="portrait"
-            android:theme="@style/CheckinTheme" />
+            android:theme="@style/AmivTheme" />
 
         <activity
             android:name=".checkin.ScanActivity"
             android:label="@string/app_name_checkin"
             android:screenOrientation="portrait"
-            android:theme="@style/CheckinTheme">
+            android:theme="@style/AmivTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".checkin.MainActivity" />
@@ -110,7 +110,7 @@
             android:name=".checkin.SettingsActivity"
             android:label="@string/app_name_checkin"
             android:screenOrientation="portrait"
-            android:theme="@style/CheckinTheme">
+            android:theme="@style/AmivTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".checkin.MainActivity" />
@@ -119,7 +119,7 @@
         <activity
             android:name=".checkin.MemberListActivity"
             android:label="@string/app_name_checkin"
-            android:theme="@style/CheckinTheme">
+            android:theme="@style/AmivTheme">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
@@ -135,7 +135,7 @@
         <activity
             android:name=".checkin.SearchMembersActivity"
             android:label="@string/app_name_checkin"
-            android:theme="@style/CheckinTheme">
+            android:theme="@style/AmivTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".checkin.MemberListActivity" />
