--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
     <application
         android:name=".core.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_amiv_logo_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_amiv_logo_icon"
         android:screenOrientation="portrait"
         android:theme="@style/AppThemeLight">
 
@@ -114,7 +114,7 @@
 
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/checkin_searchable" />
+                android:resource="@xml/checkin_search_members_searchable" />
         </activity>
 
         <activity
