--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,11 +125,11 @@
         </activity>
 
         <!-- Demo -->
-        <activity
+        <!--<activity
             android:name=".demo.MainActivity"
             android:configChanges="layoutDirection|locale"
             android:parentActivityName=".core.MainActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" /> -->
 
     </application>
 </manifest>
