Fix Notification Error with API 28, Reboot Alarm Set, Last change check
Fixing the Error where Notifications are not shown in Android 8.0, Set alarm if the deivce is rebooted, Set last change check time in settings and use it for API request, enable or disable projection option in Request

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,7 +131,17 @@
             android:parentActivityName=".core.MainActivity"
             android:screenOrientation="portrait" />
 
+
+
         <receiver  android:name=".core.AlarmReceiver"/>
+
+        <receiver android:name=".core.AlarmBootReceiver"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+        </receiver>
+
 
     </application>
 </manifest>
