--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:name=".core.MyApplication"
@@ -132,15 +133,20 @@
             android:screenOrientation="portrait" /> -->
 
 
+        <!-- Alarm Receiver receives alarm to get changes -->
+        <receiver  android:name=".core.AlarmReceiver"
+            android:process=":remote"/>
 
-        <receiver  android:name=".core.AlarmReceiver"/>
-
+        <!-- Reset alarm if device is rebooted -->
         <receiver android:name=".core.AlarmBootReceiver"
-            android:enabled="false">
+            android:enabled="false" android:process=":remote">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
         </receiver>
+
+        <!-- Alarm service which runs in background -->
+        <service android:name=".core.AlarmService" android:process=":remote"/>
 
 
     </application>
