--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,6 +142,6 @@
             </intent-filter>
         </receiver>
 
-
+        <activity android:name=".util.ui.EnumEditActivity" />
     </application>
 </manifest>
